Bug 139869 - FILEOPEN Image with contour isn't shown in document
Summary: FILEOPEN Image with contour isn't shown in document
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.3 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.2.0 target:7.1.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Regressions-imageHandling
  Show dependency treegraph
 
Reported: 2021-01-23 20:42 UTC by Aron Budea
Modified: 2021-03-27 01:41 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-01-23 20:42:48 UTC
Open attachment 137216 [details] (from bug 113366).

=> The image isn't shown (the text is still shown according to the contour).

Observed using LO 7.2.0.0.alpha0+ (4e1294b7d6f8de981147f15d4ca1b4e4853249eb), 6.1.0.3 / Ubuntu.
Fine in LO 6.0.0.3.

Bibisected to the following two commits using repo bibisect-linux-64-6.1. After the first one the image isn't shown, and the text disregards the empty placeholder. After the second commit the contour is there, but the image still isn't shown. Adding CC: to Tomaž Vajngerl, and adding CC: to Miklos Vajna.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7b355669c6ddeab2e6cec692d6afdff41c61d0fb
author		Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	2018-04-14 15:13:05 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	2018-04-20 09:15:22 +0200

"Function to load graphic swapped out (loaded on demand)"

https://cgit.freedesktop.org/libreoffice/core/commit/?id=edda1e5fc8113aa4744e32f97c96a3cc311485ca
author		Miklos Vajna <vmiklos@collabora.co.uk>	2018-04-20 16:32:00 +0200
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-04-20 21:04:35 +0200

"DOCX import: lazy-read images without external headers"


In addition, recently if you reload the document, the image flashes up, and disappears (with gtk3 VCL plugin, but not with gen). Bibisecting that in bibisect-linux-64-7.0 led to the following commit. No idea what difference it made, but it seems irrelevant to the actual issue.
https://cgit.freedesktop.org/libreoffice/core/commit/?id=8950cb8ae6a1621729ec43a6dd1c29cf04260797
author		Caolán McNamara <caolanm@redhat.com>	2020-02-04 11:34:29 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-06 12:26:37 +0100

"weld SvxFontSizeBox_Impl"
Comment 1 Commit Notification 2021-02-02 08:05:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ddc0714c40c6ea85336431a88b523f3e5c63a3f8

tdf#139869 vcl: fix lazy-loading of BMP images with logic size

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2021-02-03 10:15:16 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/f3244248e151c345fdbb07185e041142a044a017

tdf#139869 vcl: fix lazy-loading of BMP images with logic size

It will be available in 7.1.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Aron Budea 2021-03-27 01:41:54 UTC
Verified, thanks for the fix, Miklos!
Tested with 7.2.0.0.alpha0+ (3e4eb070787d4d44b3bdc95046e5b231dbbef42b) / Ubuntu.